--- a/Web_Scraping_from_XML,_JSON,_and_HTML.ipynb
+++ b/Web_Scraping_from_XML,_JSON,_and_HTML.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Web Scraping from XML, JSON, and HTML.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNlQZ1EIu9MoYbiN17hKOrZ",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyP0jmaBMQIHOQd7qEqzClcy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,16 +30,16 @@
       "metadata": {
         "id": "MbXG4du_DA_7",
         "colab_type": "code",
+        "outputId": "e0909855-ebd1-49ea-a71b-6bf6f3411028",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 211
-        },
-        "outputId": "e0909855-ebd1-49ea-a71b-6bf6f3411028"
+        }
       },
       "source": [
         "!pip install altair "
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -58,36 +59,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "3REY6vtXGIOQ",
-        "colab_type": "text"
-      },
-      "source": [
-        "## Read data from Web (HTML)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "NtzhlDlqEBcA",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from selenium import webdriver\n",
-        "chrome_options = webdriver.ChromeOptions()\n",
-        "chrome_options.add_argument('--headless')\n",
-        "chrome_options.add_argument('--no-sandbox')\n",
-        "chrome_options.add_argument('--disable-dev-shm-usage')\n",
-        "wd = webdriver.Chrome(executable_path='/usr/bin/chromedriver',options=chrome_options)\n",
-        "wd.get(\"https://www.amazon.com\")\n",
-        "# print(wd.page_source) # results"
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -305,7 +276,7 @@
       "source": [
         "import pandas as pd\n",
         "# list comprehension\n",
-        "tbill3month_df = pd.DataFrame([float(price.text) for price in tbill3month], columns=['3 Month'])\n",
+        "tbill3month_df = pd.DataFrame([float(rate.text) for rate in tbill3month], columns=['3 Month'])\n",
         "tbill3month_df.head()"
       ],
       "execution_count": 0,
@@ -631,16 +602,16 @@
       "metadata": {
         "id": "DwyiQA3J6Xg7",
         "colab_type": "code",
+        "outputId": "5fef28ab-cd22-4c10-c28d-18c9f059d962",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "5fef28ab-cd22-4c10-c28d-18c9f059d962"
+        }
       },
       "source": [
         "data"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5676,16 +5647,16 @@
       "metadata": {
         "id": "qa1SFz9X8Ypr",
         "colab_type": "code",
+        "outputId": "80870c30-c893-415a-81e5-5743c1ea8fbb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "80870c30-c893-415a-81e5-5743c1ea8fbb"
+        }
       },
       "source": [
         "data['Meta Data']['2. Symbol']"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5706,16 +5677,16 @@
       "metadata": {
         "id": "xUzRe0jV8_Mx",
         "colab_type": "code",
+        "outputId": "b293d612-4670-42b9-936d-dbae13d2d2ad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 105
-        },
-        "outputId": "b293d612-4670-42b9-936d-dbae13d2d2ad"
+        }
       },
       "source": [
         "data['Time Series (Daily)']['2020-02-14']"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5750,16 +5721,16 @@
       "metadata": {
         "id": "4rIP3Zzd9zic",
         "colab_type": "code",
+        "outputId": "af54d266-6ac5-44f3-fc59-11af5fcc4e97",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "af54d266-6ac5-44f3-fc59-11af5fcc4e97"
+        }
       },
       "source": [
         "len(data['Time Series (Daily)'])"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5790,11 +5761,11 @@
       "metadata": {
         "id": "2H80iyyU9-E6",
         "colab_type": "code",
+        "outputId": "f2d0141c-8967-44c0-d6e2-633baa13553d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 201
-        },
-        "outputId": "f2d0141c-8967-44c0-d6e2-633baa13553d"
+        }
       },
       "source": [
         "import pandas as pd\n",
@@ -5802,7 +5773,7 @@
         "date_df = pd.DataFrame([day for day in data['Time Series (Daily)']], columns=['Date'])\n",
         "date_df.head()"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5885,11 +5856,11 @@
       "metadata": {
         "id": "9cYOgjWC-92W",
         "colab_type": "code",
+        "outputId": "c3636175-4add-42e6-bfb4-5bb45377c7d0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 201
-        },
-        "outputId": "c3636175-4add-42e6-bfb4-5bb45377c7d0"
+        }
       },
       "source": [
         "import pandas as pd\n",
@@ -5897,7 +5868,7 @@
         "open_df = pd.DataFrame([data['Time Series (Daily)'][day]['1. open'] for day in data['Time Series (Daily)']], columns=['Open Price'])\n",
         "open_df.head()"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5970,17 +5941,17 @@
       "metadata": {
         "id": "k4pQ7HFMAs4q",
         "colab_type": "code",
+        "outputId": "5b267274-97c5-4e4a-e584-ce687a5c4d17",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 201
-        },
-        "outputId": "5b267274-97c5-4e4a-e584-ce687a5c4d17"
+        }
       },
       "source": [
         "full_price_df = pd.concat([date_df, open_df], axis = 1)\n",
         "full_price_df.head()"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6069,18 +6040,18 @@
       "metadata": {
         "id": "M-sOVkIrCom7",
         "colab_type": "code",
+        "outputId": "13d1cdf5-cadd-4945-e917-1bc3eadeee3c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 504
-        },
-        "outputId": "13d1cdf5-cadd-4945-e917-1bc3eadeee3c"
+        }
       },
       "source": [
         "import altair as alt\n",
         "alt.data_transformers.disable_max_rows()\n",
         "alt.Chart(full_price_df.head(20)).mark_line().encode(x='Date', y='Open Price')"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6162,18 +6133,18 @@
       "metadata": {
         "id": "qx4vg2MiOt2b",
         "colab_type": "code",
+        "outputId": "0852ff64-8d27-4fcd-f1e4-f070d2d012b9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 368
-        },
-        "outputId": "0852ff64-8d27-4fcd-f1e4-f070d2d012b9"
+        }
       },
       "source": [
         "# https://altair-viz.github.io/user_guide/transform/timeunit.html\n",
         "import altair as alt\n",
         "alt.Chart(full_price_df).mark_line().encode(x='month(Date):T', y='mean(Open Price):Q')"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6292,18 +6263,18 @@
       "metadata": {
         "id": "PCPlmA74SIrr",
         "colab_type": "code",
+        "outputId": "1c3d59cb-62cb-4891-af70-be94e8c1dd9b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 201
-        },
-        "outputId": "1c3d59cb-62cb-4891-af70-be94e8c1dd9b"
+        }
       },
       "source": [
         "name = html_tree.xpath(\"//div[@class='_3wU53n']/text()\")\n",
         "name_df = pd.DataFrame(name, columns = ['Laptop names'])\n",
         "name_df.head()"
       ],
-      "execution_count": 61,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6376,18 +6347,18 @@
       "metadata": {
         "id": "kuzAE_7WZ_cj",
         "colab_type": "code",
+        "outputId": "a9de7402-a6f4-4623-d187-eae99301e1eb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 201
-        },
-        "outputId": "a9de7402-a6f4-4623-d187-eae99301e1eb"
+        }
       },
       "source": [
         "price = html_tree.xpath(\"//div[@class='_1vC4OE _2rQ-NK']/text()\")\n",
         "price_df = pd.DataFrame(price, columns = ['Laptop Price'])\n",
         "price_df.head()"
       ],
-      "execution_count": 62,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6460,17 +6431,17 @@
       "metadata": {
         "id": "10D_IenRaOsN",
         "colab_type": "code",
+        "outputId": "1a78e802-e49a-4554-d3ff-35b6e813b545",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 201
-        },
-        "outputId": "1a78e802-e49a-4554-d3ff-35b6e813b545"
+        }
       },
       "source": [
         "full_laptop_price_df = pd.concat([name_df, price_df], axis = 1)\n",
         "full_laptop_price_df.head()"
       ],
-      "execution_count": 63,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
