--- a/Web_Scraping_from_XML,_JSON,_and_HTML.ipynb
+++ b/Web_Scraping_from_XML,_JSON,_and_HTML.ipynb
@@ -6,7 +6,7 @@
       "name": "Web Scraping from XML, JSON, and HTML.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP0jmaBMQIHOQd7qEqzClcy",
+      "authorship_tag": "ABX9TyMmAhZanSXmoBr1ugVSMoDW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6512,6 +6512,214 @@
             "tags": []
           },
           "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Jw5lilq6sGeH",
+        "colab_type": "code",
+        "outputId": "85b06401-a257-42d1-ef27-8b982036a15d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 79
+        }
+      },
+      "source": [
+        "import pandas as pd\n",
+        "desc = html_tree.xpath(\"string(//div[@class='_3ULzGw'])\")\n",
+        "desc_df = pd.DataFrame([desc], columns = ['Description'])\n",
+        "desc_df.head(5)"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Description</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Durable Metallic Chassis with a QuickSilver Fi...</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                         Description\n",
+              "0  Durable Metallic Chassis with a QuickSilver Fi..."
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lCQiN9izvENj",
+        "colab_type": "code",
+        "outputId": "f1935dde-c4ca-4ac6-c090-8ad443cfd490",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        }
+      },
+      "source": [
+        "','.join(desc)"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Durable Metallic Chassis with a QuickSilver Finish,16.5mm Thin and 1.26 Kg Light,8th Gen Intel Core i5 for superior computing,8GB RAM & 256GB SSD for superfast computing,Dedicated SSD slot for upto 1TB expandable Storage,Intel Core i5 Processor (8th Gen),8 GB LPDDR3 RAM,64 bit Windows 10 Operating System,256 GB SSD,33.78 cm (13.3 inch) Display,1 Year Onsite Warranty Commencing from the Date of Purchase,AMD APU Dual Core A6 Processor,4 GB DDR4 RAM,64 bit Windows 10 Operating System,1 TB HDD,39.62 cm (15.6 inch) Display,1 Year Onsite Warranty,Intel Core i5 Processor (8th Gen),8 GB DDR4 RAM,64 bit Windows 10 Operating System,512 GB SSD,35.56 cm (14 inch) Display,1 Year International Travelers Warranty (ITW),Intel Core i3 Processor (7th Gen),4 GB DDR4 RAM,64 bit Windows 10 Operating System,1 TB HDD,39.62 cm (15.6 inch) Display,1 Year Onsite Warranty,AMD APU Dual Core A9 Processor,4 GB DDR4 RAM,64 bit Windows 10 Operating System,1 TB HDD,39.62 cm (15.6 inch) Display,1 Year Onsite Warranty,Fast Performance (Upto 30% Faster than HDD Storage),Upto 75% Reduction in System Boot Up Time,More Energy Efficient,No Vibrations or Noise,AMD APU Dual Core A9 Processor,4 GB DDR4 RAM,64 bit Windows 10 Operating System,256 GB SSD,35.56 cm (14 inch) Display,1 Year Onsite Warranty,Intel Core i5 Processor (8th Gen),8 GB DDR4 RAM,64 bit Windows 10 Operating System,1 TB HDD,35.56 cm (14 inch) Display,1 Year Onsite Warranty,Intel Core i5 Processor (8th Gen),8 GB DDR4 RAM,64 bit Windows 10 Operating System,1 TB HDD,39.62 cm (15.6 inch) Display,1 Year Onsite Warranty,Intel Core i3 Processor (7th Gen),4 GB DDR4 RAM,64 bit Windows 10 Operating System,256 GB SSD,35.56 cm (14 inch) Display,1 Year Limited International Hardware Warranty,Intel Core i5 Processor (5th Gen),8 GB DDR3 RAM,64 bit Mac OS Operating System,128 GB SSD,33.78 cm (13.3 inch) Display,1 Year Carry In Warranty,AMD APU Dual Core A6 Processor,4 GB DDR4 RAM,64 bit Windows 10 Operating System,1 TB HDD,39.62 cm (15.6 inch) Display,1 Year Onsite Warranty,Intel Core i3 Processor (7th Gen),8 GB DDR4 RAM,64 bit Windows 10 Operating System,256 GB SSD,35.56 cm (14 inch) Display,1 Year Onsite Warranty,Intel Core i5 Processor (9th Gen),8 GB DDR4 RAM,64 bit Windows 10 Operating System,1 TB HDD,39.62 cm (15.6 inch) Display,1 Year International Warranty,AMD Ryzen 5 Quad Core Processor (2nd Gen),8 GB DDR4 RAM,64 bit Windows 10 Operating System,512 GB SSD,35.56 cm (14 inch) Display,1 Year Limited International Hardware Warranty,Intel Core i5 Processor (8th Gen),8 GB DDR4 RAM,64 bit Windows 10 Operating System,1 TB HDD,39.62 cm (15.6 inch) Display,1 Year Onsite Warranty,AMD Ryzen 5 Quad Core Processor,8 GB DDR4 RAM,64 bit Windows 10 Operating System,1 TB HDD|256 GB SSD,39.62 cm (15.6 inch) Display,1 Year International Travelers Warranty (ITW),Intel Core i7 Processor (9th Gen),8 GB DDR4 RAM,64 bit Windows 10 Operating System,1 TB HDD|256 GB SSD,39.62 cm (15.6 inch) Display,1 Year Onsite Warranty,Intel Core i3 Processor (7th Gen),4 GB DDR4 RAM,64 bit Windows 10 Operating System,1 TB HDD,35.56 cm (14 inch) Display,1 Year Onsite Warranty,AMD APU Dual Core A6 Processor,4 GB DDR4 RAM,64 bit Windows 10 Operating System,1 TB HDD,39.62 cm (15.6 inch) Display,1 Year Onsite Warranty,Intel Core i7 Processor (9th Gen),8 GB DDR4 RAM,64 bit Windows 10 Operating System,1 TB HDD|256 GB SSD,39.62 cm (15.6 inch) Display,1 Year International Travelers Warranty (ITW),Intel Core i5 Processor (8th Gen),8 GB DDR4 RAM,64 bit Windows 10 Operating System,512 GB SSD,39.62 cm (15.6 inch) Display,1 Year Onsite Warranty,Intel Core i5 Processor (8th Gen),8 GB DDR4 RAM,64 bit Windows 10 Operating System,1 TB HDD|256 GB SSD,35.56 cm (14 inch) Display,1 Year Limited International Hardware Warranty,Intel Core i5 Processor (8th Gen),8 GB DDR4 RAM,64 bit Windows 10 Operating System,512 GB SSD,39.62 cm (15.6 inch) Display,1 Year International Travelers Warranty (ITW),Intel Core i5 Processor (9th Gen),8 GB DDR4 RAM,64 bit Windows 10 Operating System,1 TB HDD,39.62 cm (15.6 inch) Display,1 Year Limited International Hardware Warranty'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SxglDZwD2KQa",
+        "colab_type": "code",
+        "outputId": "859e9d68-12ca-445d-b0d0-6f8287d55272",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "desc = html_tree.xpath(\"(//div[@class='_3ULzGw']/ul)\")\n",
+        "len(desc)"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "24"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 75
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cR5bf7VxDrMF",
+        "colab_type": "code",
+        "outputId": "92ab7475-a911-4ba3-fdec-287ebabfbbbf",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "print(len(desc[0]))"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "11\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "j561ZY_yD0KC",
+        "colab_type": "code",
+        "outputId": "fdb22130-7d5d-4dba-bbf1-cca424a74301",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "desc = html_tree.xpath(\"(//div[@class='_3ULzGw']/ul)[1]\")\n",
+        "len(desc)"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 84
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-lKekTzAEbjU",
+        "colab_type": "code",
+        "outputId": "bf10efe2-f720-4950-f915-53e9dbb18dc7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        }
+      },
+      "source": [
+        "desc = html_tree.xpath(\"string((//div[@class='_3ULzGw']/ul)[1])\")\n",
+        "print(desc)"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Durable Metallic Chassis with a QuickSilver Finish16.5mm Thin and 1.26 Kg Light8th Gen Intel Core i5 for superior computing8GB RAM & 256GB SSD for superfast computingDedicated SSD slot for upto 1TB expandable StorageIntel Core i5 Processor (8th Gen)8 GB LPDDR3 RAM64 bit Windows 10 Operating System256 GB SSD33.78 cm (13.3 inch) Display1 Year Onsite Warranty Commencing from the Date of Purchase\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
