--- a/Web_Scraping_from_XML,_JSON,_and_HTML.ipynb
+++ b/Web_Scraping_from_XML,_JSON,_and_HTML.ipynb
@@ -6,7 +6,7 @@
       "name": "Web Scraping from XML, JSON, and HTML.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMh6z6Y36iozs4255tD5Lmx",
+      "authorship_tag": "ABX9TyMIgn5crEoF7RDiQQ5gesph",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6780,6 +6780,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "N5fMJL8lM5z6",
+        "colab_type": "text"
+      },
+      "source": [
+        "OK. Now get description of all the products"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "GHGf4edYJwAv",
@@ -6860,6 +6870,16 @@
           },
           "execution_count": 118
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "az8G08I7M-jK",
+        "colab_type": "text"
+      },
+      "source": [
+        "Then put them together in 1 dataframe"
       ]
     },
     {
