--- a/Web_programming_with_Flask_and_Bootstrap.ipynb
+++ b/Web_programming_with_Flask_and_Bootstrap.ipynb
@@ -55,7 +55,7 @@
       "source": [
         "This exercise is for a local computer, in which you have Anaconda installed. To start, install Flask (pip install Flask). Note that though you can run the application in Jupyter Notebook like in the code chunk below but it is unstable. Instead save the Python code in app.py, then in Anaconda Prompt, run:\n",
         "\n",
-        "python app.py\n",
+        "python main.py\n",
         "\n",
         "Then take the link shown there to the web browser"
       ]
@@ -75,12 +75,19 @@
         "from flask import Flask\n",
         "app = Flask(__name__)\n",
         "\n",
-        "@app.route(\"/\")\n",
-        "def hello():\n",
-        "    return \"Hello World! It's me\"\n",
+        "@app.route('/')\n",
+        "def index():\n",
+        "    return render_template('transaction.html')\n",
         "\n",
+        "\n",
+        "@app.route('/result', methods=['POST'])\n",
+        "def transaction():\n",
+        "    if request.method == 'POST':\n",
+        "        result = request.form\n",
+        "        return render_template(\"transaction.html\",result = result)\n",
+        "    \n",
         "if __name__ == '__main__':\n",
-        "    app.run(port=5000)"
+        "    app.run(port=5000)    "
       ],
       "execution_count": 2,
       "outputs": [
@@ -254,38 +261,8 @@
         "https://getbootstrap.com/docs/4.0/components/buttons/\n",
         "\n",
         "For Bootstrap in general, check:\n",
-        "https://getbootstrap.com/docs/4.0/getting-started/introduction/ \n",
-        "\n",
-        "Here is the Python code"
+        "https://getbootstrap.com/docs/4.0/getting-started/introduction/ \n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "nEUBnPNwUPyL",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from flask import Flask\n",
-        "app = Flask(__name__)\n",
-        "\n",
-        "@app.route('/')\n",
-        "def index():\n",
-        "    return render_template('transaction.html')\n",
-        "\n",
-        "\n",
-        "@app.route('/result', methods=['POST'])\n",
-        "def transaction():\n",
-        "    if request.method == 'POST':\n",
-        "        result = request.form\n",
-        "        return render_template(\"transaction.html\",result = result)\n",
-        "    \n",
-        "if __name__ == '__main__':\n",
-        "    app.run(port=5000)    "
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
